[package]
name = "captest"
version = "0.1.0"
edition = "2024"

[dependencies]
scap = { path = "../scap" }
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
async-openai = "0.20"
base64 = "0.22"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ocrs = { path = "../ocrs/ocrs" }
rten = ">= 0.14.0, < 0.22.0"
core-graphics-helmer-fork = "0.24.0"
core-foundation = "0.9"
